--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "validate"
-version = "0.0.0"
+version = "0.0.1"
 authors = ["Nathan Fuchs <fuchsnj@gmail.com>"]
+readme = "README.md"
+repository = "https://github.com/fuchsnj/validate"
+homepage = "https://github.com/fuchsnj/validate"
+documentation = "https://github.com/fuchsnj/validate"
+license = "MIT"
+description = """
+A library to easily validate user input
+"""
 
 [dependencies]
 regex = "*"
