--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 repository = "https://github.com/fuchsnj/validate"
 homepage = "https://github.com/fuchsnj/validate"
 documentation = "https://github.com/fuchsnj/validate"
-license = "MIT"
+license = "MIT/Apache-2.0"
 description = """
 A library to easily validate user input
 """
