--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "validate"
 version = "0.3.1"
-authors = ["Nathan Fuchs <fuchsnj@gmail.com>"]
+authors = ["Nathan Fox <fuchsnj@gmail.com>"]
 readme = "README.md"
 repository = "https://github.com/fuchsnj/validate"
 homepage = "https://github.com/fuchsnj/validate"
